# PersonalProjects

./: .gitignore  gitPush.sh  imp.txt
Compiler/: program.txt
ComputerVision/archive/: BasicImageProcessing.cpp  exp  exp.cpp  harris.cpp  runexp.sh  tmp.cpp  utils  utils.cpp  utils.sh
ComputerVision/books/: download.pdf?id=31294228  wget-log
ComputerVision/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  Notes.md  TODO.md  cmake_install.cmake  lat.patch  run.sh
ComputerVision/cpp/docs/: BasicImageProcessing.md
ComputerVision/cpp/src/: BasicImageProcessing.cpp
ComputerVision/cpp/src/ArtifactDetectors/Corners/: HarrisCornerDetector.cpp  HarrisCornerDetector.h
ComputerVision/cpp/src/ArtifactDetectors/Edges/: CannyEdgeDetector.cpp  CannyEdgeDetector.h
ComputerVision/cpp/src/ArtifactDetectors/FeatureDiscriptors/: ScaleInvarientFeatureTransform.h
ComputerVision/cpp/src/BasicTransforms/: GaussianTransform.h  MiscTransforms.h
ComputerVision/cpp/src/Driver/: Driver.cpp
ComputerVision/cpp/src/Utils/Core/: Core.h  Utils.h
ComputerVision/cpp/src/Utils/Kernals/: GaussianKernal.h
ComputerVision/data/: 1-Figure1-1.png:Avecto.Zone.Identifier  1-Figure1-1.png:PG$Secure  BabyFood-Test6.JPG:PG$Secure  redHatSimple.jpg:PG$Secure  redHats.jpg:PG$Secure
ComputerVision/experimental/: app.data  exp  harris  help.txt  sftimpl.cpp  sift  sift.cpp  sift.py  sift.sh  tmp  utils  utils.cpp
ComputerVision/python/: harris.py  sift.py
ComputerVision/research/: read.md
DIscreteOptimization/: jW79BYVJQxSu_QWFSQMUjw_3bb033dfb7bb457181a26680916c933f_knapsack.zip:Zone.Identifier
DIscreteOptimization/Knapsack/: Solver  Solver.cpp  run.sh  solver.py  solverJava.py
DigitRecognizer/: TODO.md  digits  digits.cpp  mathutils.h  neuralnet.h  run.sh  test.csv:Zone.Identifier  train.csv:Zone.Identifier
Games/LinkedIn/: Queens  Queens.cpp  board  board.cpp  run.sh
Games/Pacman/: aocc_pacman  buildAndRun.sh  gcc_pacman  pacman  pacman.cpp  perf.py  upstream_clang_pacman
Games/Pacman/expr/: CMakeLists.txt  board.h  build-run.sh  game.cpp  ghost.h  pacman.h  pellet.h  state.h  utils.h
Games/Snake/: snake.cpp
Linker/: a.c
Linker/examples/: a.s
MiniProjects/: cost
MiniProjects/FinancialAnalyis/: Gold.py  g2.PY
MiniProjects/Redis/: RedisClient  RedisClient.cpp  RedisServer  RedisServer.cpp  redis  redis.cpp
MiniProjects/archives/: dijkstra.cpp  input.txt
NandToTetris/: nand2tetris.zip:PG$Secure  nand2tetris.zip:Zone.Identifier
NeuralNetworks/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  aocc_run.sh  clang_run.sh  cmake_install.cmake  gcc_run.sh
NeuralNetworks/include/: Layer.h  Matrix.h  NeuralNetwork.h  Neuron.h
NeuralNetworks/src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
NeuralNetworks/test/: AnalyzeRuntime.py  AoccPerf  ClangPerf  FeedForwardValidator  FeedForwardValidator.cpp  MesurePerformace  MesurePerformace.cpp  aocclog.txt  clanglog.txt  gcclog.txt
OsKernal/: Makefile  boot.asm  boot.sh  build.sh  cmds.txt  gitpush.sh  message.txt
OsKernal/src/: config.h  kernel.asm  kernel.c  kernel.h  linker.ld
ProgramAnalysisTAC-IR/: DataFlowAnalysis  DataFlowAnalysis.cpp  GenerateBasicBlocks.h  GenerateControlFlowGraph.h  Helpers.h  IR.txt  IR_design.txt  Instructions.h  Notes.txt  ProgramAnalysisAndOptimizations.cpp  SystemIO.h  Testing.h  Todo.txt  UnitTesting.cpp  Utilities.h  a.out  basic_blocks.txt  dump.txt  output.txt
ProgramAnalysisTAC-IR/Archives/: ParseIR.cpp
ProgramAnalysisTAC-IR/Research/: ResourcesLinks.txt
ProgramSynthesis/: SmtDemoAndResearch.py
SimultenousLocalizationAndMapping/: driver.py  pexels-clément-proust-17639076 (2160p).mp4:Avecto.Zone.Identifier  pexels-clément-proust-17639076 (2160p).mp4:PG$Secure
SparePatctches/: findOptimal.py  nextupSIFT.patch
UCSD_DSA/: ZbXGTnQSSm61xk50EvpuTw_b5653e5869ef44c680fb84b29011bd72_course3_2020_07_27.zip:Zone.Identifier  git_sync.sh
UCSD_DSA/misc/: LinerDS  Trees  (+9 more)
(+210 files in other folders)
